styles.css
.logo {
  width: 20%;
}

#Brand {
  margin-left: 20px;
  font-weight: bold;
  color: white;
}

/* purgecss start ignore */
@tailwind base;
h1 {
  @apply text-3xl font-thin leading-loose;
}
h2 {
  @apply text-2xl font-thin leading-loose;
}
h3 {
  @apply text-xl font-thin leading-loose;

}
h4 {
  @apply font-semibold;
}
ul {
  @apply list-disc;
  @apply list-inside;
}
p {
  @apply mb-1
}

article a {
  @apply text-blue-600 underline;
}

.btn-blue {
  @apply bg-blue-500 text-white font-bold py-2 px-4 mb-3 rounded;
}
.btn-blue:hover {
  @apply bg-blue-700;
}
.panel-error {
  @apply bg-red-700 text-white font-bold py-2 px-4 rounded;
}

input {
  @apply flex-1 rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty {
  @apply rounded py-2 px-4 cursor-pointer;
}

.faculty-science {
  background-color: #9EB0D1;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-science:hover {
   background-color: #577ABE;
}

.faculty-business {
  background-color: #C197B9;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-business:hover {
  background-color: #B57CAA

}

.faculty-arts {
  background-color: #D3A8AF;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-arts:hover {
  background-color: #CF9EA6;

}

.faculty-creative {
  background-color: #DBA396;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-creative:hover {
  background-color: #D99A8C;

}

.faculty-engineering {
  background-color: #B4A9C4;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-engineering:hover {
  background-color: #AEA2C0;

}


.faculty-law {
  background-color: #9EBAC6;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-law:hover {
  background-color: #91B3C1;

}


.faculty-medical {
  background-color: #8EBFBA;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-medical:hover {
  background-color: #85BBB6;

}

.faculty-education {
  background-color: #AAC29A;
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

.faculty-education:hover {
  background-color: #9FBB8C;

}

.faculty-science:hover {
  @apply bg-blue-300;
}

select {
  @apply rounded py-2 px-4 text-gray-700 mb-3 leading-tight border border-solid border-gray-400;
}

label {
  @apply py-2;
}

.courseDescription {
  @apply rounded py-2 px-4;
}

.courseList-science {
  @apply bg-blue-100 mb-3 rounded-b;
}

@tailwind components;
/* purgecss end ignore */
@tailwind utilities;

